[package]
name = "braveblock"
version = "0.1.9"
authors = ["Gal Ben David <gal@intsights.com>"]
edition = "2018"
description = "A fast and easy adblockplus parser and matcher based on adblock-rust package"
readme = "README.md"
repository = "https://github.com/intsights/braveblock"
homepage = "https://github.com/intsights/braveblock"
license = "MIT"
keywords = ["adblock", "ads", "adblocker", "rust", "brave", "abp", "pyo3"]

[package.metadata.maturin]
requires-python = ">=3.6"
classifier = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Rust",
]

[lib]
name = "braveblock"
crate-type = ["cdylib"]

[dependencies.adblock]
version = "0.3.3"
default-features = false
features = ["full-regex-handling", "embedded-domain-resolver"]

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]

[profile.release]
lto = true
panic = "abort"
