[build-system]
requires = ["maturin"]
build-backend = "maturin"

[tool.maturin]
sdist-include = [
    "src/*",
    "Cargo.toml",
    "braveblock/*.py",
    "braveblock/*.pyi"
]
manylinux = "2014"
strip = true

[tool.poetry]
name = "braveblock"
version = "0.1.7"
authors = ["Gal Ben David <gal@intsights.com>"]
description = "A fast and easy adblockplus parser and matcher based on adblock-rust package"
readme = "README.md"
repository = "https://github.com/intsights/braveblock"
homepage = "https://github.com/intsights/braveblock"
license = "MIT"
keywords = [
    "adblock",
    "ads",
    "adblocker",
    "rust",
    "brave",
    "abp",
    "pyo3"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Rust",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"
wheel = "*"
pytest-runner = "*"
maturin = "*"
